Changed z-index values in ArticleToolbarContainer, breadcrumbs, and main-nav to adjust layering of elements. Also added hiding of progress bar and disabling of scroll when menu is open in main-nav. These changes were made to improve the user experience and ensure that elements are displayed correctly and interactable.

--- a/src/components/breadcrumbs/breadcrumbs.css
+++ b/src/components/breadcrumbs/breadcrumbs.css
@@ -7,7 +7,7 @@
     top: 62px;
     margin-top: -15px;
     height: 30px;
-    z-index: 10;
+    z-index: 90;
     background-color: var(--bg-light-papaya);
 }
 
