--- a/src/layouts/nav/main-nav.css
+++ b/src/layouts/nav/main-nav.css
@@ -62,6 +62,25 @@ html[data-current-page*="/blog"] {
     height: auto;
 }
 
+ /* HIDE PROGRESS BAR WHEN MENU OPEN */
+#main-body:has(#click:checked) .progress-bar {
+    display: none;
+    visibility: hidden;
+    height: 0;
+}
+
+ /* ----------- */
+
+/* DISABLE SCROLL WHEN MENU OPEN */
+#main-body:has(#click:checked) {
+    overflow: hidden;
+    height: 100%;
+    -webkit-overflow-scrolling: touch;
+    inset: 0;
+}
+
+ /* ------------ */
+
 @media screen and (width <= 500px) {
     #main-body:has(#click:checked) .menu-btn {
         right: 10px;
